# LanguageModel_Fusion

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  tox.ini
.github/workflows/: docker-image-publish.yml  python-package.yml  test.yml
conf/: config.yaml
rnnt_lm_fusion/: __init__.py  eval_data.py  lm_train.py  optimize.py  rescore.py  workflow.py
rnnt_lm_fusion/train_ngram/: train.py  utils.py
rnnt_lm_fusion/word_language_model/: data.py  generate.py  main.py  model.py
tests/: conftest.py  test_main.py  test_train.py
