[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnnt_lm_fusion"
version = "1.0.0"
authors = [
  { name="Alexander92-cpu" },
]
description = "Language Model fusio for ASR RNN-T model"
readme = "README.md"
requires-python = ">=3.10.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]

dependencies = [
      "nemo-toolkit>=1.21.0",
      "numpy>=1.23.5",
      "scipy>=1.11.4",
      "sentencepiece>=0.1.99",
      "torch>=1.13.1",
      "torchaudio>=0.13.1"
]

[project.optional-dependencies]
pkg = [
    "kenlm @ git+https://github.com/kpu/kenlm/archive/master.zip"
]

[tool.setuptools.packages.find]
include = ["rnnt_lm_fusion*"]
