[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnnt_lm_fusion"
version = "1.0.0"
authors = [
  { name="Alexander92-cpu" },
]
description = "Language Model fusio for ASR RNN-T model"
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]

dependencies = [
      "huggingface-hub==0.20.3",
      "hydra-core==1.3.2",
      "kenlm @ https://github.com/kpu/kenlm/archive/master.zip",
      "nemo-toolkit[all]==1.22.0",
      "optuna==3.5.0",
      "sentencepiece==0.2.0",
      "torch==2.2.1",
      "torchaudio==2.2.1",
      "torchvision==0.17.1",
      "transformers[torch]==4.38.1"
]

[project.optional-dependencies]
test = [
    "pytest",
    "tox",
    "pytest-cov",
    "pytest-ordering"
]

[tool.setuptools.packages.find]
include = ["rnnt_lm_fusion*"]
