[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnnt_lm_fusion"
version = "1.0.0"
authors = [
  { name="Alexander92-cpu" },
]
description = "Language Model fusio for ASR RNN-T model"
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]

dependencies = [
      "huggingface-hub",
      "hydra-core",
      "kenlm @ https://github.com/kpu/kenlm/archive/master.zip",
      "nemo-toolkit[all]",
      "optuna",
      "sentencepiece",
      "torch",
      "torchaudio",
      "torchvision",
      "transformers[torch]"
]

[project.optional-dependencies]
test = [
    "pylint[spelling]",
    "pytest",
    "tox",
    "pytest-cov",
    "pytest-ordering",
    "pytest-depends"
]

[tool.setuptools.packages.find]
include = ["rnnt_lm_fusion*"]